package com.example.tipcalculator.utils

object TestTags {
    val homeScreen = "homeScreen"
    val billInputText = "bill input text"
    val tipInputText = "tip input text"
    val getTipButton = "get tip button"
    val resetButton = "reset button"
    val tipText = "tip text"
}